# mermade

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  flake.nix
src/: client.rs  main.rs  merkle.rs  server.rs
