[package]
name = "simple_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
#actix-web-actors = "4.0.0-beta.9"
#actix-rt = "2.5.2"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
log = "0.4"
env_logger = "0.9"
hex-literal = "0.4.1"
