[package]
name = "mermade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.6.1"
actix-files = "0.6"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex-literal = "0.4.1"
proptest = "1.2.0"
